# labeling-notebook

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  start_server.py
example/: pets.json
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  api.ts  app.tsx  index.tsx  react-app-env.d.ts
frontend/src/components/: ImageAnnotator.tsx  ImageBrowser.tsx  ImageDataEditor.tsx  SplitView.tsx
frontend/src/components/AnnotatedImage/: ComponentAnnotation.tsx  index.tsx
frontend/src/components/KeyValueTable/: KeyValueTableRow.tsx  ResizableTable.tsx  index.tsx
frontend/src/pages/: HomePage.tsx
frontend/src/utils/: dimensions.ts  shapes.ts  types.ts  useImageInfo.ts
labeling/: __main__.py
labeling/notebook/: __init__.py  api_files.py  api_plugins.py  utils.py
labeling/plugin/: example.py
labelling/: __main__.py
labelling/notebook/: __init__.py  api_files.py
server/: __init__.py  api_auth.py  api_debug.py  api_files.py
server/models/: users.py
test/: conftest.py  test_api_auth.py  test_files.py  test_plugins.py
test/example/: image_annotated.json
