[tool.poetry]
name = "labeling-notebook"
version = "0.4.0"
description = "An image annotation or labeling tool for small project"
authors = ["Wanasit T"]
license = "MIT License"
packages = [
    { include = "labeling" },
]
include = ["frontend/build/**/*.*"]

[tool.poetry.scripts]
label = 'labeling.__main__:main'

[tool.poetry.dependencies]
python = "^3.7"
Flask="^2.0.1"

[tool.poetry.dev-dependencies]
pytest="^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
